--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@nextui-org/input": "^2.1.21",
     "@nextui-org/react": "^2.3.6",
     "@nextui-org/system": "^2.1.2",
+    "@nextui-org/tabs": "^2.0.29",
     "@nextui-org/theme": "^2.2.3",
     "@nextui-org/tooltip": "^2.0.33",
     "@tanstack/react-router": "^1.31.22",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
