--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
     "singleQuote": true,
     "jsxSingleQuote": true,
     "tabWidth": 4,
-    "trailingComma": "none",
+    "trailingComma": "all",
     "semi": false,
     "proseWrap": "always",
     "printWidth": 80,
