--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
+    "@nextui-org/date-input": "^2.0.3",
+    "@nextui-org/date-picker": "^2.0.7",
     "@nextui-org/input": "^2.1.21",
     "@nextui-org/react": "^2.3.6",
+    "@nextui-org/scroll-shadow": "^2.1.16",
+    "@nextui-org/select": "^2.1.27",
     "@nextui-org/system": "^2.1.2",
+    "@nextui-org/table": "^2.0.33",
     "@nextui-org/tabs": "^2.0.29",
     "@nextui-org/theme": "^2.2.3",
     "@nextui-org/tooltip": "^2.0.33",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-router": "^1.31.22",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
@@ -25,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-redux": "^9.1.2",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
