--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@internationalized/date": "^3.5.4",
+    "@nextui-org/accordion": "^2.0.34",
     "@nextui-org/button": "^2.0.31",
+    "@nextui-org/calendar": "^2.0.6",
+    "@nextui-org/checkbox": "^2.1.1",
+    "@nextui-org/chip": "^2.0.29",
     "@nextui-org/date-input": "^2.0.3",
     "@nextui-org/date-picker": "^2.0.7",
     "@nextui-org/input": "^2.1.21",
@@ -25,10 +30,12 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-router": "^1.31.22",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
