--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.9",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
